# social-insecurity

./: .flaskenv  .git-blame-ignore-revs  .gitignore  LICENSE.md  README.md  REPORT.md  config.py  pyproject.toml  requirements.txt  socialinsecurity.py
app/: __init__.py  config.py  database.py  forms.py  routes.py  schema.sql
app/static/css/: general.css
app/templates/: alert.html.j2  base.html  base.html.j2  comments.html  comments.html.j2  friends.html  friends.html.j2  index.html  index.html.j2  profile.html  profile.html.j2  stream.html  stream.html.j2
app/templates/macros/: render_field.html
tests/: test_routes.py
