[tool.poetry]
name = "social-insecurity"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
Flask-WTF = "^1.0.1"
python = "^3.10"
click = "^8.1.3"
Flask = "^2.2.2"
itsdangerous = "^2.1.2"
Jinja2 = "^3.1.2"
MarkupSafe = "^2.1.1"
Werkzeug = "^2.2.2"
WTForms = "^3.0.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
djlint = "^1.12.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
