[project]
name = "social-insecurity"
version = "1.0.0"
description = ""
authors = [{ name = "solbero", email = "njosol@pm.me" }]
dependencies = ["flask[dotenv]>=2.2.2", "Flask-WTF>=1.1.1"]
requires-python = ">=3.9"
license = { text = "MIT" }

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = ["black>=23.1.0", "isort>=5.12.0", "djlint>=1.19.13"]

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"

[tool.djlint]
indent = 2
